build: Used compile-testing library