@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <name>Auto Record</name>
@@ -38,7 +40,9 @@
         <jsr305.version>3.0.2</jsr305.version>
         <junit-jupiter.version>5.9.3</junit-jupiter.version>
         <assertj.version>3.24.2</assertj.version>
+        <compile-testing.version>0.21.0</compile-testing.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
+        <maven-surefire-plugin.argLine>--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</maven-surefire-plugin.argLine>
     </properties>
 
     <dependencies>
@@ -76,6 +80,11 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.testing.compile</groupId>
+            <artifactId>compile-testing</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -133,6 +142,11 @@
                 <groupId>org.assertj</groupId>
                 <artifactId>assertj-core</artifactId>
                 <version>${assertj.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.testing.compile</groupId>
+                <artifactId>compile-testing</artifactId>
+                <version>${compile-testing.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -207,13 +221,12 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <!--suppress MavenModelInspection -->
-                    <argLine>${argLine}</argLine>
+                    <argLine>${maven-surefire-plugin.argLine}</argLine>
                     <reportFormat>plain</reportFormat>
                     <consoleOutputReporter>
                         <disable>true</disable>
                     </consoleOutputReporter>
-                    <statelessTestsetInfoReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5StatelessTestsetInfoTreeReporter" />
+                    <statelessTestsetInfoReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5StatelessTestsetInfoTreeReporter"/>
                 </configuration>
             </plugin>
             <plugin>
@@ -308,7 +321,8 @@
                 <sonar.host.url>https://sonarcloud.io</sonar.host.url>
                 <sonar.organization>pawellabaj</sonar.organization>
                 <sonar.projectKey>pawellabaj:auto-record</sonar.projectKey>
-                <sonar.coverage.exclusions>src/main/java/pl/com/labaj/autorecord/processor/**/*</sonar.coverage.exclusions>
+                <!--suppress UnresolvedMavenProperty -->
+                <maven-surefire-plugin.argLine>${argLine} --add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</maven-surefire-plugin.argLine>
             </properties>
 
             <build>
@@ -332,6 +346,7 @@
                                 <configuration>
                                     <formats>
                                         <format>XML</format>
+                                        <format>HTML</format>
                                     </formats>
                                 </configuration>
                             </execution>
